# pokerlab

./: .gitignore  README.md  pyproject.toml  requirements.txt
poker/: __init__.py  bot.py  card.py  cli_play.py  deck.py  engine.py  equity.py  hand_eval.py  history.py  names.py  promptctx.py  replay.py  sim_cli.py  suggest.py  ui.py
tests/: test_hand_eval.py
